--- a/styles/styles.css
+++ b/styles/styles.css
@@ -259,7 +259,7 @@
 }
 
 .container-left-nosotros {
-  height: 42vh;
+  height: 28rem;
   display: flex;
   align-items: center;
   /* background-color: aqua; */
@@ -267,7 +267,7 @@
 
 
 .container-right-nosotros {
-  height: 42vh;
+  height: 28rem;
   display: flex;
   align-items: flex-end;
   /* background-color: lightgreen; */
@@ -275,7 +275,7 @@
 
 .container-image {
   width: 70%;
-  height: 100%;
+  height: 95%;
   margin-left: 25%;
   border-radius: 2.5rem;
   overflow: hidden;
@@ -329,6 +329,8 @@
   justify-content: flex-start;
 }
 
+
+
 /* Nosotros with icons */
 .section-nosotros-with-icons-mobile {
   width: 100%;
@@ -372,7 +374,7 @@
 /* Estilos para la sección de more-us */
 /* ********************************* */
 
-.more-us-mobile {
+#more-us-mobile-2 {
   display: none;
 }
 
@@ -773,12 +775,12 @@
 
 .container-servicios {
   width: 100%;
-  height: 40rem;
+  height: 45rem;
   margin-top: 5rem;
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: lightcoral;
+  /* background-color: lightcoral; */
   position: relative;
 }
 
@@ -823,9 +825,10 @@
   position: absolute;
   left: 50%;
   transform: translateX(-50%);
-  top: -13rem;
-  background-color: red;
-  border-radius: 3rem;
+  top: -15rem;
+  background-color: #CCCCCC;
+  border-radius: 2.5rem;
+  overflow: hidden;
 }
 
 
@@ -843,6 +846,7 @@
   height: 70%;
   position: absolute;
   bottom: 0;
+  
 }
 
 .title-description-services h3 {
@@ -897,6 +901,7 @@ h2.contact-title {
   font-size: 6rem;
   font-weight: 600;
   margin-bottom: 30px;
+  
 }
 
 .contact-info {
